osha.policy Changelog
=====================

1.3.2 (unreleased)
------------------

- Added LinkChecker Postgres Importer (pilz)


1.3.1 (2010-02-09)
------------------

- Added the new categories also to the Subcategory vocabulary #463 (thomasw)
- Bugfix in the LinguaPlone_generator_patch.py: import AT_GENERATE_METHOD,
  even though it is not directly referencend in the code, but the ClassGenerator
  from LP.utils depends on it (thomasw)
- allowing update_object_history() from slc.cleanwordpastedtext for untrusted
  code, because it's such a lovely and handy method (thomasw)
- Tested the ExternalMethod for replacing the osha.theme Network
  Member Links portlet with the osha.fop FOP Links portlet (deroiste)


1.3.0 (2010-01-28)
------------------

- Export of jsregistry from test.osha, this configuration fixed an issue with
  jquery.dynatree.min.js (deroiste)
- Add external method to migrate the annotatedlinks subtyped docs (jcbrand)
- added ExternalMethod for locally registering the osha_metadata field,
  works just like setLinkListExtension.py (thomasw)
- Added a patch for LinguaPlone's method Generator, for details see notes in
  the patch (thomasw)


1.3b2 (2010-01-19)
------------------

- Removed adapter/schemaexteder.py, now located in osha.adaptation (jcbrand)


1.3b1 (2010-01-04)
------------------

- Bugfix in foldercontents: define obj before you reference it (thomasw)
- Major refactoring of the adapter/schemaextender.py class. The adapter
  registrations are now all happening in adapter/configure.zcml. This has
  drastically reduced the number of import statements in schemaextender.py.
  Furthermore, a lot of cruft was removed and common code snippets were
  refactored into a common new superclass. (jcbrand)

1.2.30 (2009-12-09)
-------------------

- Added EUPL license (deroiste)
- Subtyped HelpCenterFAQ to use translations for keywords RM #231 (deroiste)
- Added conditional patches for p4a.image, so that they don't add their indexes
  (gerken)